--- a/main.tex
+++ b/main.tex
@@ -2,18 +2,17 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[spanish]{babel}
+\usepackage{verbatim} 
 \graphicspath{ {img/} }
 
-\title{
-{Diseño y construcción de un brazo robótico para sistemas de manufactura flexible}\\
-{\large Universidad Veracruzana}\\
-\author{Angel Ernesto Trujillo Elizondo}
-\date{11 de abril de 2019}
-}
 
 \begin{document}
 
 \include{chapter0/chapter0}
 \include{chapter1/chapter1}
+\include{finalchapter/finalchapter}
+
+
+
 
 \end{document}
