--- a/references.bib
+++ b/references.bib
@@ -21,4 +21,13 @@
   url       = {https://www.amazon.com/Flexible-Manufacturing-System-H-K-Shivanand/dp/8122418708?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=8122418708},
 }
 
+@Book{Dombre2007,
+  title     = {Robot Manipulators: Modeling, Performance Analysis and Control (Control Systems, Robotics, and Manufacturing series)},
+  publisher = {Wiley-ISTE},
+  year      = {2007},
+  author    = {Etienne Dombre, Wisama Khalil},
+  isbn      = {978-1-905209-10-1},
+  url       = {https://www.amazon.com/Robot-Manipulators-Modeling-Performance-Manufacturing/dp/190520910X?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=190520910X},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
