--- a/references.bib
+++ b/references.bib
@@ -42,4 +42,14 @@
   url       = {https://www.ebook.de/de/product/29172931/kevin_m_northwestern_university_illinois_lynch_frank_c_seoul_national_university_park_modern_robotics.html},
 }
 
+@Book{Corke2017,
+  title     = {Robotics, Vision and Control},
+  publisher = {Springer International Publishing},
+  year      = {2017},
+  author    = {Corke, Peter},
+  date      = {2017-05-20},
+  ean       = {9783319544137},
+  url       = {https://www.ebook.de/de/product/33463342/peter_corke_robotics_vision_and_control.html},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
