--- a/references.bib
+++ b/references.bib
@@ -52,4 +52,17 @@
   url       = {https://www.ebook.de/de/product/33463342/peter_corke_robotics_vision_and_control.html},
 }
 
+@Article{Corke2007,
+  author    = {P.I. Corke},
+  title     = {A Simple and Systematic Approach to Assigning Denavit{\textendash}Hartenberg Parameters},
+  journal   = {{IEEE} Transactions on Robotics},
+  year      = {2007},
+  volume    = {23},
+  number    = {3},
+  pages     = {590--594},
+  month     = {jun},
+  doi       = {10.1109/tro.2007.896765},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
