--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,11 @@
 \usepackage{multicol}
 \usepackage{matlab-prettifier}
 \usepackage{ mathrsfs }
+\usepackage{enumitem}
+\setlength{\parskip}{2mm}
+
+\renewcommand{\baselinestretch}{1.2} 
+
 
 \begin{document}
 
