--- a/references.bib
+++ b/references.bib
@@ -119,4 +119,22 @@
   year    = {2001},
 }
 
+@Article{ReviewRoboticArm,
+  author  = {Rahual Gautam and Ankush Gedam and Ashish Zade and Ajay Mahawadiwar},
+  title   = {Review on Development of Industrial Robotic Arm},
+  journal = {International Research Journal of Engineering and Technologogy},
+  year    = {2017},
+}
+
+@Book{Craig2013,
+  title     = {Introduction to Robotics: Pearson New International Edition},
+  publisher = {Pearson HigherEducation},
+  year      = {2013},
+  author    = {Craig, John J.},
+  date      = {2013-10-03},
+  ean       = {9781292052526},
+  pagetotal = {384},
+  url       = {https://www.ebook.de/de/product/23460286/john_j_craig_introduction_to_robotics_pearson_new_international_edition.html},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
