Work, work, work work.
Rihana

--- a/finalchapter/finalchapter.tex
+++ b/finalchapter/finalchapter.tex
@@ -4,6 +4,7 @@
 \bibliographystyle{ieeetr} 
 
 \chapter*{Anexos}
+
 \addcontentsline{toc}{chapter}{Anexos}
 \section*{Anexo 1. Función de creación del brazo robótico}
 \addcontentsline{toc}{section}{Anexo 1. Función de creación del brazo robótico}
@@ -16,10 +17,10 @@
 \lstinputlisting[style=Matlab-editor]{./MATLAB/Anexo2.m}
 
 \section*{Anexo 3. Cinemática inversa}
-\addcontentsline{toc}{section}{Anexo 2. Cinemática directa}
+\addcontentsline{toc}{section}{Anexo 3. Cinemática inversa}
 \lstinputlisting[style=Matlab-editor]{./MATLAB/Anexo3.m}
 
 \section*{Anexo 4. Dinámica}
-\addcontentsline{toc}{section}{Anexo 2. Dinámica}
+\addcontentsline{toc}{section}{Anexo 4. Dinámica}
 
 \lstinputlisting[style=Matlab-editor]{./MATLAB/Anexo4.m}
