--- a/references.bib
+++ b/references.bib
@@ -141,6 +141,7 @@
   author    = {P. Akella and M. Peshkin and E. Colgate and W. Wannasuphoprasit and N. Nagesh and J. Wells and S. Holland and T. Pearson and B. Peacock},
   title     = {Cobots for the automobile assembly line},
   booktitle = {Proceedings 1999 {IEEE} International Conference on Robotics and Automation (Cat. No.99CH36288C)},
+  year      = {2017},
   publisher = {{IEEE}},
   doi       = {10.1109/robot.1999.770061},
 }
@@ -199,6 +200,7 @@
 @Book{Robotiq,
   title     = {COBOTS EBOOK},
   publisher = {Robotiq},
+  year      = {2017},
   author    = {Robotiq},
 }
 
@@ -230,6 +232,48 @@
   month     = {jul},
   publisher = {{IEEE}},
   doi       = {10.1109/mesa.2018.8449156},
+}
+
+@Article{Moran2007,
+  author    = {Michael E. Moran},
+  title     = {Evolution of robotic arms},
+  journal   = {Journal of Robotic Surgery},
+  year      = {2007},
+  volume    = {1},
+  number    = {2},
+  pages     = {103--111},
+  month     = {may},
+  doi       = {10.1007/s11701-006-0002-x},
+  publisher = {Springer Nature},
+}
+
+@Book{Nof1999,
+  title     = {Handbook of Industrial Robotics},
+  publisher = {John Wiley {\&} Sons, Inc.},
+  year      = {1999},
+  editor    = {Shimon Y. Nof},
+  month     = {feb},
+  doi       = {10.1002/9780470172506},
+}
+
+@Book{Gupta2016,
+  title     = {Industrial Automation and Robotics: An Introduction},
+  publisher = {MERCURY LEARNING \& INFORMATION},
+  year      = {2016},
+  author    = {Gupta, A. K. and Arora, S. K. and Westcott, Jean Riescher},
+  isbn      = {1938549309},
+  date      = {2016-10-30},
+  ean       = {9781938549304},
+  pagetotal = {400},
+  url       = {https://www.ebook.de/de/product/20527399/a_k_gupta_s_k_arora_jean_riescher_westcott_industrial_automation_and_robotics_an_introduction.html},
+}
+
+@Article{odrivedoc,
+  author  = {Oskar Weigl.},
+  title   = {ODrive motor guide},
+  journal = {https://docs.google.com/spreadsheets/d/12vzz7XVEK6YNIOqH0jAz51F5VUpc-lJEs3mmkWP1H4Y/edit},
+  year    = {2016},
+  url     = {https://docs.google.com/spreadsheets/d/12vzz7XVEK6YNIOqH0jAz51F5VUpc-lJEs3mmkWP1H4Y/edit#gid=0},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
