--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \include{chapter1/chapter1}
 \include{chapter2/chapter2}
 \include{chapter3/chapter3}
+\include{chapter4/chapter4}
 \include{finalchapter/finalchapter}
 
 \begin{comment}
