--- a/references.bib
+++ b/references.bib
@@ -276,4 +276,52 @@
   url     = {https://docs.google.com/spreadsheets/d/12vzz7XVEK6YNIOqH0jAz51F5VUpc-lJEs3mmkWP1H4Y/edit#gid=0},
 }
 
+@InProceedings{Sensinger2012,
+  author    = {Jonathon W. Sensinger and James H. Lipsey},
+  title     = {Cycloid vs. harmonic drives for use in high ratio, single stage robotic transmissions},
+  booktitle = {2012 {IEEE} International Conference on Robotics and Automation},
+  year      = {2012},
+  month     = {may},
+  publisher = {{IEEE}},
+  doi       = {10.1109/icra.2012.6224739},
+}
+
+@Article{Pham2018,
+  author    = {Anh-Duc Pham and Hyeong-Joon Ahn},
+  title     = {High Precision Reducers for Industrial Robots Driving 4th Industrial Revolution: State of Arts, Analysis, Design, Performance Evaluation and Perspective},
+  journal   = {International Journal of Precision Engineering and Manufacturing-Green Technology},
+  year      = {2018},
+  volume    = {5},
+  number    = {4},
+  pages     = {519--533},
+  month     = {aug},
+  doi       = {10.1007/s40684-018-0058-x},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
+@Article{Lei2012,
+  author    = {Lei Lei and Ying Tao and Tian Min Guan},
+  title     = {Parametric Design of Cycloid Gear Based on {SolidWorks}},
+  journal   = {Advanced Materials Research},
+  year      = {2012},
+  volume    = {538-541},
+  pages     = {3106--3109},
+  month     = {jun},
+  doi       = {10.4028/www.scientific.net/amr.538-541.3106},
+  publisher = {Trans Tech Publications, Ltd.},
+}
+
+@Article{Nachimowicz2016,
+  author    = {Jerzy Nachimowicz and Stanis{\l}aw Rafa{\l}owski},
+  title     = {Modelling the Meshing of Cycloidal Gears},
+  journal   = {Acta Mechanica et Automatica},
+  year      = {2016},
+  volume    = {10},
+  number    = {2},
+  pages     = {137--140},
+  month     = {jun},
+  doi       = {10.1515/ama-2016-0022},
+  publisher = {Walter de Gruyter {GmbH}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
